  (Matthieu Casanova)

- Fixed an exception that occurs when opening jEdit from command line
  with some files to open as argument if a jEdit server is running
  (#3173669 - Matthieu Casanova)

- jEdit now force drops from external applications to be COPY and not
  MOVE drops. It prevents ftp explorer from deleting dropped files
  (#1208598 - Matthieu Casanova)
  
- When the cursor was at a start (or end) of non-top (non-bottom) line,
  Find Next (Previous) for a non-empty regex starting with "^" (ending
  with "$") wrongly skipped the occurrence at the cursor.
  (SF.net bug #2953604 - Kazutoshi Satoda)

- Corrected a wrong specifications (javadoc comments) of
  SearchMatcher#nextMatch(). (SF.net bug #2953604 - Kazutoshi Satoda)

- Fixed an exception that prevent from opening properties dialog of non local
  files in the VFS Browser (#3199876 - Matthieu Casanova)
  
  
}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry,
Shlomy Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova,
Eric Le Lay, Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey,
Dion Whitehead, Marcelo Vanzin, Jesse Pavel, Jakub Roztočil,
Kazutoshi Satoda, Anshal Shukla, Milutin Jovanović, Vadim Voituk,
goebbe, James Nicholl, Uwe donovaly, Sergey Mezentsev, Jim Lawton,
Suraj Kurapati, Paulo Moura, curtis_call, Rowan Collins,
Stephen Blackheath, asitdepends, Michael Schlotter, Robin Neatherway,
strank, and Hisateru Tanaka for contributing to this release.

{{{ Bug fixes

- Fixed an exception when trying to add new menu items to the context menu
  if some ActionSets have been unloaded (plugin deactivation)
  (Matthieu Casanova #3071355)

- Windows installer tries to quit existing jEdit instance before trying to
  install (Björn "Vampire" Kautler)

- Closes menus when toggling dockables. (#3022084 - Anshal Shukla)
